creando configuraciones para nuevos excels tablas historico AGO y ACI

--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -834,7 +834,7 @@
                             </h2>
                             {% if not municipio %}<h4>Consolidado 153 municipios</h4>{% else %}
                                 <h4>{{ municipio }}</h4>{% endif %}
-                            {% descargar_excel "gp7" %}
+                            {% descargar_excel 'aci-ago-ingreso' %}
                         </td>
                     </tr>
                     <tr>
@@ -904,7 +904,7 @@
                             </h2>
                             {% if not municipio %}<h4>Consolidado 153 municipios</h4>{% else %}
                                 <h4>{{ municipio }}</h4>{% endif %}
-                            {% descargar_excel "gp7" %}
+                            {% descargar_excel 'aci-ago-gasto' %}
                         </td>
                     </tr>
                     <tr>
